syntax = "proto3";

service ChatPaxos {
  rpc CompareAndSwap (CompareAndSwapRequest) returns (CompareAndSwapReply);
}

message CompareAndSwapRequest {
  string nick = 1;
  repeated string msg = 2;	
}
message CompareAndSwapReply {
	repeated string msg = 1;
}