syntax = "proto3";

service ChatPaxosService {
  rpc CompareAndSwap (CompareAndSwapRequest) returns (CompareAndSwapReply);
  rpc Decide (DecideRequest) returns (DecideReply);
}

message CompareAndSwapRequest {
  int slot = 1;
  repeated string value = 2;	
}
message CompareAndSwapReply {
	repeated string value = 1;
}

message DecideRequest{
	repeated string value = 1;
	int slot = 2;
}

message DecideReply {
	bool ok = 1;
}
