syntax = "proto3";

service ChatServerService {
  rpc SendMsg (SendMsgRequest) returns (SendMsgReply);
}

message SendMsgRequest {
  string nick = 1;
  int id = 3;
  repeated string msg = 2;	
}
message SendMsgReply {
	repeated string msg = 1;
}